--- a/css/luxbar.css
+++ b/css/luxbar.css
@@ -265,7 +265,7 @@
 .luxbar-menu-material-yellow .luxbar-hamburger span,
 .luxbar-menu-material-yellow .luxbar-hamburger span::before,
 .luxbar-menu-material-yellow .luxbar-hamburger span::after {
-  background-color: #fff; }
+  background-color: #ffe300; }
 
 .luxbar-menu-material-brown,
 .luxbar-menu-material-brown .dropdown ul {
